generated-tests/tests/snapshots/tsx/test_generated_labeled_statement.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
label: for (let i = 0; i < 10; i++) { break label; }

AST:
(program
  (labeled_statement
    (statement_identifier)
    (for_statement
      (lexical_declaration
        (variable_declarator
          (identifier i)
          (number)
        )
      )
      (expression_statement
        (binary_expression
          (identifier i)
          (number)
        )
      )
      (update_expression
        (identifier i)
      )
      (statement_block
        (break_statement
          (statement_identifier)
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "i",
            position: Position {
                start_line: 1,
                start_column: 17,
                end_line: 1,
                end_column: 18,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 24,
                end_line: 1,
                end_column: 25,
            },
        },
        Usage {
            name: "i",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 32,
                end_line: 1,
                end_column: 33,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
