generated-tests/tests/snapshots/tsx/test_generated_lookup_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type Obj = { key: string }; const value18: Obj['key'] = 'test';

AST:
(program
  (type_alias_declaration
    (type_identifier)
    (object_type
      (property_signature
        (property_identifier)
        (type_annotation
          (predefined_type)
        )
      )
    )
  )
  (lexical_declaration
    (variable_declarator
      (identifier value18)
      (type_annotation
        (lookup_type
          (type_identifier)
          (literal_type
            (string
              (string_fragment)
            )
          )
        )
      )
      (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "Obj",
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 9,
            },
            definition_type: TypeDefinition,
        },
        Definition {
            name: "key",
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 17,
            },
            definition_type: PropertyDefinition,
        },
        Definition {
            name: "value18",
            position: Position {
                start_line: 1,
                start_column: 35,
                end_line: 1,
                end_column: 42,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "key",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 14,
                end_line: 1,
                end_column: 17,
            },
        },
        Usage {
            name: "Obj",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 44,
                end_line: 1,
                end_column: 47,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
