generated-tests/tests/snapshots/tsx/test_generated_object1.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ prop13: value111, prop23: value210 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop13")
        value: (identifier "value111")
      )
      (pair
        key: (property_identifier "prop23")
        value: (identifier "value210")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "prop13",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 3,
                end_line: 1,
                end_column: 9,
            },
        },
        Usage {
            name: "value111",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 19,
            },
        },
        Usage {
            name: "prop23",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 21,
                end_line: 1,
                end_column: 27,
            },
        },
        Usage {
            name: "value210",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 37,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
